--- a/main.html
+++ b/main.html
@@ -9,11 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Time, Space, and Complexity.</h1>
-	<p>Time complexitity refers to time taken by a program to run.It shows 
-       if the program is efficient or not</p>
-	<p><b>Space Complexity</b> refers to the space in the memory(heap) taken
-       by program . Generally linear Complexity is represented by O(n).
-</p>
+	<p>Time complexity, efficient<p>
+    <p><b>Space Complexity</b>, O(n)</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
